--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
 	"homepage": "https://github.com/melboudali/Testing-JavaScript-Applications#readme",
 	"devDependencies": {
 		"jest": "27.0.6"
+	},
+	"dependencies": {
+		"knex": "^0.21.21",
+		"sqlite3": "^5.0.2"
 	}
 }
