--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"isomorphic-fetch": "^3.0.0",
 		"knex": "^0.21.21",
 		"koa": "^2.13.1",
+		"pino": "^7.0.0-rc.3",
 		"sqlite3": "^5.0.2"
 	}
 }
