--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	"homepage": "https://github.com/melboudali/Testing-JavaScript-Applications#readme",
 	"devDependencies": {
 		"jest": "27.0.6",
-		"jest-extended": "^0.11.5"
+		"jest-extended": "^0.11.5",
+		"supertest": "^6.1.6"
 	},
 	"dependencies": {
 		"@koa/router": "^10.1.0",
