--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/melboudali/Testing-JavaScript-Applications#readme",
 	"devDependencies": {
+		"@sinonjs/fake-timers": "^7.1.2",
 		"jest": "27.0.6",
 		"jest-extended": "^0.11.5",
 		"supertest": "^6.1.6"
