--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sinonjs/fake-timers": "^7.1.2",
 		"@testing-library/dom": "^8.2.0",
 		"@testing-library/jest-dom": "^5.14.1",
+		"fetch-mock": "^9.11.0",
 		"jest": "27.0.6",
 		"jest-extended": "^0.11.5",
 		"supertest": "^6.1.6"
